Bug 84685 - RTF import: Unable to create Indexes from files generated by PAF Companion
Summary: RTF import: Unable to create Indexes from files generated by PAF Companion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3 tar...
Keywords: filter:rtf, regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2014-10-05 10:01 UTC by steve_atkins
Modified: 2015-12-17 12:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Original RTF file generated by PAF (5.25 KB, application/msword)
2014-11-14 22:59 UTC, steve_atkins
Details
File with index created by OpenOffice V4.1.1 (17.59 KB, application/vnd.oasis.opendocument.text)
2014-11-14 23:05 UTC, steve_atkins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve_atkins 2014-10-05 10:01:07 UTC
A program I use frequently generates RTF files which contains index tags.  I normally use OpenOffice to create an Alphabetical index.     I downloaded LibreOffice 4.3.2.2 (after uninstalling OO) but when I tried creating an index all I got were the words "Alphabetical Index" instead of the index itself.   Regressed to 4.2.6.3 to see if the bug was new but I got the same result.   Have had to move back to OpenOffice 4.1.1

I can supply the RTF file and the output from OpenOffice if required but the files do contain sensitive information and I can't post them on an open forum.
Comment 1 Buovjaga 2014-11-14 18:32:52 UTC
Please supply the file. You can strip out sensitive info with this: https://wiki.documentfoundation.org/QA/BugReport/Attachments#Confidential_Attachments

Change back to UNCONFIRMED after you have attached the file.
Comment 2 steve_atkins 2014-11-14 22:59:53 UTC
Created attachment 109497 [details]
Original RTF file generated by PAF

This is the original file generated by PAF.   It contains tag data that can be used to generate an alphabetical index.
Comment 3 steve_atkins 2014-11-14 23:05:41 UTC
Created attachment 109498 [details]
File with index created by OpenOffice V4.1.1

This is the file generated by OpenOffice.   
I loaded the RTF file, then selected 
   Insert>Indexes and Tables>Alphabetical Index

When I try this with LibreOffice all I get generated is the text string "Alphabetical Index"
Comment 4 steve_atkins 2014-11-14 23:08:02 UTC
BTW - these files are non-confidential.  They contain falsified information.
Comment 5 Buovjaga 2014-11-15 06:15:14 UTC
Reproduced on Linux and Windows, adding bibisectRequest.

Win 7 64-bit Version: 4.4.0.0.alpha2+
Build ID: b021b5983c62e266b82d9f0c5c6d8d8900553827
TinderBox: Win-x86@39, Branch:master, Time: 2014-11-12_01:10:08

Ubuntu 14.10 64-bit
Version: 4.3.3.2
Build ID: 430m0(Build:2)

Was not able to test with 4.4 on Ubuntu because the darned thing kept crashing with this output when I entered the indexes and tables dialog:

warn:writerfilter:3425:1:writerfilter/source/dmapper/DomainMapper.cxx:1029: DomainMapper::lcl_attribute: unhandled token: 0
warn:sfx.control:3425:1:sfx2/source/control/dispatch.cxx:1354: Childwindow slot missing: 10365
warn:legacy.osl:3425:1:sfx2/source/sidebar/ResourceManager.cxx:444: context name not recognized
warn:sfx.control:3425:1:sfx2/source/control/dispatch.cxx:1354: Childwindow slot missing: 10365
warn:legacy.tools:3425:1:vcl/inc/svdata.hxx:387: object deleted while in use !
warn:vcl.control:3425:1:vcl/source/control/button.cxx:2248: No new-style group set on radiobutton <> using old-style digging around
warn:sfx.control:3425:1:sfx2/source/control/dispatch.cxx:1354: Childwindow slot missing: 10365
warn:legacy.tools:3425:13:linguistic/source/gciterator.cxx:165: lcl_SkipWhiteSpaces: illegal arguments
Comment 6 Urmas 2014-11-15 07:52:38 UTC
It was broken by the new LO RTF filter.
Comment 7 Michael Stahl 2014-12-16 23:00:27 UTC
the \xe index entries are not supported by the new RTF import filter.

fixed on master.
Comment 8 Commit Notification 2014-12-16 23:01:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f14e6e06b9e3c82c267649d63512a3538e5ee2f5

fdo#84685: writerfilter: RTF import: support \xe index entry

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-12-16 23:01:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1dd1dfc152c7cbeb374fe4f38b08c6af9cef2c06

(related fdo#84685): writerfilter: RTF import: support \tc TOC entry

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-12-16 23:03:06 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b2cb891eb415f94ad54237e6e8c42acef513f45&h=libreoffice-4-4

fdo#84685: writerfilter: RTF import: support \xe index entry

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-12-16 23:03:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6631b46dfb894ff8f2bbb09c92f1786c756ee352&h=libreoffice-4-4

(related fdo#84685): writerfilter: RTF import: support \tc TOC entry

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-12-18 15:48:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d90c5fbf67dc76c18cf703267139e7ad6b26564b&h=libreoffice-4-3

fdo#84685: writerfilter: RTF import: support \xe index entry

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Robinson Tryon (qubit) 2015-12-17 12:53:20 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]