fdo#84685: writerfilter: RTF import: support \xe index entry

(cherry picked from commit f14e6e06b9e3c82c267649d63512a3538e5ee2f5)

(related fdo#84685): writerfilter: RTF import: support \tc TOC entry

(cherry picked from commit 1dd1dfc152c7cbeb374fe4f38b08c6af9cef2c06)

fix Windows build
(cherry picked from commit acfd640fd8547d3275c5db714b88d52b3fe7c4d5)

Change-Id: Ia957541a5997961aa86b2eb8537ebd29d3092691